fix background image alignment

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -236,23 +236,19 @@ footer {
 }
 
 .header-image-wrapper {
-  background-image: url("../img/sedona-sunset.jpg");
+  position: relative;
+}
+
+.header-background-image {
   width: 100%;
-  height: 100%;
-  background-size: cover;
+  min-height: 500px;
+  object-fit: cover;
 }
 
 .header-image-text {
   padding: 0 40px;
-
-  /* line-height: 6rem; */
-
-  /* font-size: 5rem; */
-  margin: auto;
-  position: relative;
+  position: absolute;
   top: 50%;
-
-  /* transform: translateY(-50%); */
 }
 
 .cursor {
